Fixing Dark Mode
Index Transition Delay Fixed

--- a/CSSfiles/DarkMode.css
+++ b/CSSfiles/DarkMode.css
@@ -9,5 +9,5 @@
 body {
 	background: var(--background-color);
 	color: var(--text-color);
-    transition: background 1.5s;
+    transition: background 1;
 }
